--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
             <artifactId>selenium-java</artifactId>
             <version>4.3.0</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>com.vimalselvam</groupId>
             <artifactId>cucumber-extentsreport</artifactId>
             <version>3.1.1</version>
@@ -45,6 +45,11 @@
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>5.0.9</version>
+        </dependency>-->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.7.0</version>
         </dependency>
     </dependencies>
 
